--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     width: 500px;
     min-height: 50%;
     border-radius: 50%;
-    background: red;
+    background: rgb(255, 196, 0);
 }
 body{
     display: flex;
